# rust-user-b

./: Cargo.toml  README.md  run-cargo.sh
api/: Cargo.toml
api/src/: auth.rs  main.rs  request_inputs.rs  request_outputs.rs
api/src/routes/: user.rs
store/: .env  Cargo.toml  README.md  diesel.toml
store/migrations/2025-07-22-133729_my_create_users/: up.sql
store/migrations/2025-07-26-043125_create_users/: down.sql  up.sql
store/src/: config.rs  lib.rs  schema.rs  store.rs
store/src/models/: user.rs
